@@ -69,6 +69,9 @@
         <entry name="negativeExponents" type="Bool">
             <default>false</default>
         </entry>
+        <entry name="negativeBinaryTwosComplement" type="Bool">
+            <default>false</default>
+        </entry>
         <entry name="binary" type="Bool">
             <default>false</default>
         </entry>
